product service endpoints creation

--- a/product-service/src/main/resources/application.properties
+++ b/product-service/src/main/resources/application.properties
@@ -1,2 +1,2 @@
 spring.application.name=product-service
-spring.data.mongodb.uri=mongodb://localhost:27017/products_db
+spring.data.mongodb.uri=mongodb://root:admin@localhost:27017/products_db?authSource=admin
