--- a/product-service/src/main/resources/application.properties
+++ b/product-service/src/main/resources/application.properties
@@ -1,2 +1,13 @@
 spring.application.name=product-service
-spring.data.mongodb.uri=mongodb://root:admin@localhost:27017/products_db?authSource=admin
+
+# PostgreSQL Configuration
+spring.datasource.url=jdbc:postgresql://localhost:5432/products_db
+spring.datasource.username=admin
+spring.datasource.password=admin123
+spring.datasource.driver-class-name=org.postgresql.Driver
+
+# JPA Configuration
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.properties.hibernate.format_sql=true
