--- a/order_service/docker-compose.yaml
+++ b/order_service/docker-compose.yaml
@@ -3,34 +3,21 @@ services:
     image: postgres:latest
     container_name: postgres
     environment:
-      POSTGRES_DB: products_db
+      POSTGRES_DB: orders_db
       POSTGRES_USER: admin
       POSTGRES_PASSWORD: admin123
     ports:
-      - "5432:5432"
+      - "5433:5432" # local port:container port
     volumes:
       - postgres_data:/var/lib/postgresql
     healthcheck:
-      test: [ "CMD-SHELL", "pg_isready -U admin -d products_db" ]
+      test: [ "CMD-SHELL", "pg_isready -U admin -d orders_db" ]
       interval: 5s
       timeout: 5s
       retries: 5
       start_period: 5s
     networks:
       - ecommerce-microservices-network
-
-  #pgadmin:
-  #  image: dpage/pgadmin4:latest
-  #  container_name: pgadmin
-  #  environment:
-  #    PGADMIN_DEFAULT_EMAIL: admin@admin.com
-  #    PGADMIN_DEFAULT_PASSWORD: admin123
-  #  ports:
-  #    - "5050:80"
-  #  depends_on:
-  #    - postgres
-  #  networks:
-  #    - ecommerce-microservices-network
 
 volumes:
   postgres_data:
